--- a/www/index.html
+++ b/www/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
-
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="lib/bootstrap/bootstrap.min.css">
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="js/common/autocomplete/autocomplete.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -20,7 +22,7 @@
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&?key=AIzaSyBfVDEDoc6pe-ysmoXTePirUk1ZYiGhsnc"></script>
    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfVDEDoc6pe-ysmoXTePirUk1ZYiGhsnc"></script> -->
 
-    <script src="js/common/ngautocomplete.js"></script>
+    <script src="js/common//autocomplete/autocomplete.js"></script>
     <script src="js/app.js"></script>
     <script src="js/routes/route.service.js"></script>
     <script src="js/routes/routes.js"></script>
