--- a/www/index.html
+++ b/www/index.html
@@ -15,8 +15,9 @@
     -->
 
     <!-- ionic/angularjs js -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.11/require.min.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-
+    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&?key=AIzaSyBfVDEDoc6pe-ysmoXTePirUk1ZYiGhsnc"></script>
