--- a/www/js/routes/routes.view.html
+++ b/www/js/routes/routes.view.html
@@ -14,7 +14,7 @@
         <!-- <span class="input-label">{{originLabel}}</span> -->
         <!-- <input type="text" placeholder="" ng-model="setup.address1" ng-blur="address1ChangeHandler()"> -->
         <input type="text" id="homeAddress" class="form-control" g-places-autocomplete ng-model="address1"
-        ng-blur="address1ChangeHandler(address1)"
+        ng-blur="address1ChangeHandler(address1)" addressselect="fromAddressSelectHandler(place)"
         />
       </label>
     </form>
@@ -26,7 +26,7 @@
         <!-- <span class="input-label">{{destinationLabel}}</span> -->
         <!-- <input type="text" placeholder="" ng-model="setup.address2" ng-blur="address2ChangeHandler()"> -->
         <input type="text" id="workAddress" class="form-control" g-places-autocomplete ng-model="address2"
-        ng-blur="address2ChangeHandler(address2)"
+        ng-blur="address2ChangeHandler(address2)" change="changeHandler" addressselect="toAddressSelectHandler(place)"
         />
       </label>
     </form>
@@ -39,7 +39,7 @@
       </ion-item>
     </ion-list>
     <form class="list"></form>
-    <button class="button button-block button-positive" ng-click="scheduleInstantNotification()">
+    <!-- <button class="button button-block button-positive" ng-click="scheduleInstantNotification()">
               Instant
             </button>
 
@@ -59,8 +59,8 @@
             </button>
             <button class="button  button-block button-positive" ng-click="cancelNotification()">
               Cancel
-            </button>
-          
+            </button> -->
+
   </ion-content>
   <div id="column-content" style="position:absolute;bottom:0px;left:0px;">
 
