--- a/www/index.html
+++ b/www/index.html
@@ -23,9 +23,12 @@
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&?key=AIzaSyBfVDEDoc6pe-ysmoXTePirUk1ZYiGhsnc"></script>
    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfVDEDoc6pe-ysmoXTePirUk1ZYiGhsnc"></script> -->
 
-    <script src="js/common//autocomplete/autocomplete.js"></script>
+    <script src="js/common/autocomplete/autocomplete.js"></script>
     <script src="js/app.js"></script>
     <script src="js/routes/route.service.js"></script>
+    <script src="js/common/weather/weather.service.js"></script>
+    <script src="js/common/notifications/notifications.service.js"></script>
+    <script src="js/common/util/constants.js"></script>
     <script src="js/routes/routes.js"></script>
     <script src="js/routes/route.detail.js"></script>
     <script src="js/settings/settings.js"></script>
